All Image link Update

--- a/css/phonea.css
+++ b/css/phonea.css
@@ -4,7 +4,7 @@
     /* overflow: hidden; */
 }
 body{
-    background-image: url(/img/ABOUTP.jpg);
+    background-image: url(https://vaibhavwithgit.github.io/GamerZone.github.io/img/ABOUTP.jpg);
     background-size: cover;
 }
 h3{
