--- a/css/phonel.css
+++ b/css/phonel.css
@@ -4,7 +4,7 @@
     /* overflow: hidden; */
 }
 body{
-    background-image: url(/img/LOGP.jpg);
+    background-image: url(https://vaibhavwithgit.github.io/GamerZone.github.io/img/LOGP.jpg);
     background-size: cover;
 }
 .cb{
