--- a/css/phones.css
+++ b/css/phones.css
@@ -4,7 +4,7 @@
     /* overflow: hidden; */
 }
 body{
-    background-image: url(/img/SIGNP.jpg);
+    background-image: url(https://vaibhavwithgit.github.io/GamerZone.github.io/img/SIGNP.jpg);
     background-size: cover;
 }
 .cb{
