--- a/css/stylei.css
+++ b/css/stylei.css
@@ -4,7 +4,7 @@
             /* overflow: hidden; */
         }
         body{
-            background-image: url(/img/WEL.jpg );
+            background-image: url(https://vaibhavwithgit.github.io/GamerZone.github.io/img/WEL.jpg );
             background-size: cover;
         }
         .wel{
