--- a/css/phoneh.css
+++ b/css/phoneh.css
@@ -4,7 +4,7 @@
     /* overflow: hidden; */
 }
 body{
-    background-image: url(/img/HOMEP.jpg);
+    background-image: url(https://vaibhavwithgit.github.io/GamerZone.github.io/img/HOMEP.jpg);
     background-size: cover;
 }
 .nb{
