--- a/css/phonei.css
+++ b/css/phonei.css
@@ -4,7 +4,7 @@
     /* overflow: hidden; */
 }
 body{
-    background-image: url(/img/WELP.jpg);
+    background-image: url(https://vaibhavwithgit.github.io/GamerZone.github.io/img/WELP.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
