--- a/css/stylea.css
+++ b/css/stylea.css
@@ -4,7 +4,7 @@
             /* overflow: hidden; */
         }
         body{
-            background-image: url(/img/about.jpg);
+            background-image: url(https://vaibhavwithgit.github.io/GamerZone.github.io/img/about.jpg);
             background-size: cover;
         }
         h3{
