--- a/css/styleh.css
+++ b/css/styleh.css
@@ -4,7 +4,7 @@
         /* overflow: hidden; */
     }
     body{
-        background-image: url(/img/HOME.jpg);
+        background-image: url(https://vaibhavwithgit.github.io/GamerZone.github.io/img/HOME.jpg);
         background-size: cover;
     }
     .nb{
