--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
             /* overflow: hidden; */
         }
         body{
-            background-image: url(/img/SIGN.jpg);
+            background-image: url(https://vaibhavwithgit.github.io/GamerZone.github.io/img/SIGN.jpg);
             background-size: cover;
         }
         .cb{
