--- a/css/stylem.css
+++ b/css/stylem.css
@@ -4,7 +4,7 @@
             /* overflow: hidden; */
         }
         body{
-            background-image: url(/img/MAIN.jpg);
+            background-image: url(https://vaibhavwithgit.github.io/GamerZone.github.io/img/MAIN.jpg);
             background-size: cover;
         }
         img{
