--- a/css/phonei.css
+++ b/css/phonei.css
@@ -4,9 +4,7 @@
     /* overflow: hidden; */
 }
 body{
-    /* background-image: url(https://vaibhavwithgit.github.io/GamerZone.github.io/img/WELP2.jpg); */
-    background-image: url(/img/WELP2.jpg);
-    /* background-repeat: no-repeat; */
+    background-image: url(https://vaibhavwithgit.github.io/GamerZone.github.io/img/WELP2.jpg);
     background-size: cover;
 }
 .wel{ 
